--- a/CSS/ProductRGStyle.css
+++ b/CSS/ProductRGStyle.css
@@ -1,72 +1,76 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f7e1e1;
-    background-repeat: no-repeat;
-    background-size: cover;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    height: 100vh;
+    justify-content: center;
     margin: 0;
-    padding: 0;
-    background-image: url("../resourses/FondoInicioSesion.jpg");
-    
-}
-.logo {
-    position: fixed;
-    top: 5vh;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 30vw;
-}
-.contenido {
-    width: 90%;
-    max-width: 400px;
-    padding: 20px;
-    background-color: #ffffff;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
-
-h1 {
-    text-align: center;
+    height: 100vh;
+    background-color: #ffefd3;
 }
 
 form {
+    display: inline-block;
+    text-align: left;
     margin-top: 20px;
+    padding: 20px;
+    border: 1px solid #8b7a5e  ;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    background-color: #d0ecea ;
 }
-
-.form-group {
-    margin-bottom: 10px;
+header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 25px;
+    background-color: #9fd6d2;
 }
-
 label {
-    display: block;
-    font-weight: bold;
+    display: inline-block;
+    width: 150px;
+    text-align: right;
 }
-
+.logo {
+    width: 200px;
+    height: 100px;
+    margin-right: 20px;
+}
 input[type="text"],
-input[type="password"] {
-    width: 95%;
-    padding: 8px;
-    border: 1px solid #ccc;
+input[type="number"],
+textarea,
+input[type="date"] {
+    width: 250px;
+    padding: 5px;
     border-radius: 3px;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    font-size: 14px;
 }
 
-button {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    font-size: 16px;
-    font-weight: bold;
-    color: #fff;
-    background-color: #007bff;
+input[type="submit"],
+input[type="button"] {
+    background-color: #8b7a5e ;
+    color: black;
     border: none;
-    border-radius: 3px;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-top: 10px;
+    border-radius: 5px;
+    transition-duration: 0.5s;
     cursor: pointer;
 }
 
-button:hover {
-    background-color: #0056b3;
+input[type="submit"]:hover,
+input[type="button"]:hover {
+    background-color: #fffee4 ;
+}
+.resultados {
+    display: flex;
+    overflow-x: auto;
+    scroll-behavior: auto;
+    max-width: 100vw;
+    background-color:#d0ecea ;
 }
