--- a/CSS/PaymentMethodStyle.css
+++ b/CSS/PaymentMethodStyle.css
@@ -19,7 +19,7 @@ body {
     transform: translateX(-50%);
     width: 30vw;
 }
-.contenido {
+.paymentMethod {
     width: 90%;
     max-width: 400px;
     padding: 20px;
@@ -69,4 +69,10 @@ button {
 
 button:hover {
     background-color: #0056b3;
+}
+
+.labelCreditCard{
+    display: flex;
+    align-items: center;
+    
 }
