--- a/CSS/IncidentRPStyle.css
+++ b/CSS/IncidentRPStyle.css
@@ -1,35 +1,83 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f7e1e1;
-    background-repeat: no-repeat;
-    background-size: cover;
+    margin: 0;
+    padding: 0;
+    background-color: #ffefd3;
+}
+
+header {
+    background-color: #9fd6d2;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header-info {
+    flex-grow: 1;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    margin: 0;
-    padding: 0;
-    background-image: url("../resourses/FondoInicioSesion.jpg");
-    
 }
+
+.header-info label {
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.header-buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-end;
+}
+
+.header-buttons button {
+    margin-top: 10px;
+    padding: 10px 20px;
+    font-size: 14px;
+    background-color: #8b7a5e ;
+    font-size: large;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.reporte-buttons {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.reporte-buttons button {
+    margin-right: 10px;
+    padding: 10px 20px;
+    font-size: 14px;
+    background-color: #8b7a5e;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    color: #ffffff;
+}
+
 .logo {
-    position: fixed;
-    top: 5vh;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 30vw;
-}
-.contenido {
-    width: 90%;
-    max-width: 400px;
-    padding: 20px;
-    background-color: #ffffff;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    width: 400px;
+    height: 200px;
+    margin-right: 10px;
 }
 
 h1 {
+    margin: 0;
+}
+
+h2 {
+    margin: 0;
+}
+
+.content {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
 }
 
@@ -41,32 +89,27 @@ form {
     margin-bottom: 10px;
 }
 
-label {
-    display: block;
-    font-weight: bold;
-}
-
-input[type="text"],
-input[type="password"] {
+textarea {
     width: 95%;
     padding: 8px;
     border: 1px solid #ccc;
     border-radius: 3px;
+    resize: vertical;
 }
 
 button {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    font-size: 16px;
-    font-weight: bold;
-    color: #fff;
-    background-color: #007bff;
+    margin-top: 10px;
+    padding: 10px 20px;
+    font-size: 14px;
+    background-color: #8b7a5e;
+    font-size: large;
     border: none;
-    border-radius: 3px;
+    border-radius: 4px;
     cursor: pointer;
+    transition-duration: 0.5s;
+    color: #ffffff;
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #ffefd3 ;
 }
