--- a/CSS/RPD_MainDStyle.css
+++ b/CSS/RPD_MainDStyle.css
@@ -1,72 +1,92 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f7e1e1;
-    background-repeat: no-repeat;
-    background-size: cover;
+    margin: 0;
+    padding: 0;
+    background-color: #ffefd3;
+}
+
+header {
+    background-color: #9fd6d2;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.header-info {
+    flex-grow: 1;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    margin: 0;
-    padding: 0;
-    background-image: url("../resourses/FondoInicioSesion.jpg");
-    
-}
-.logo {
-    position: fixed;
-    top: 5vh;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 30vw;
-}
-.contenido {
-    width: 90%;
-    max-width: 400px;
-    padding: 20px;
-    background-color: #ffffff;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-h1 {
+.header-info label {
+    font-size: 16px;
+    font-weight: bold;
+}
+
+
+.logo {
+    width: 400px;
+    height: 200px;
+    margin-right: 10px;
+}
+
+h2 {
+    margin: 0;
+}
+
+.content {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
 }
 
-form {
-    margin-top: 20px;
-}
 
-.form-group {
-    margin-bottom: 10px;
-}
-
-label {
+.tab-content {
     display: block;
-    font-weight: bold;
 }
 
-input[type="text"],
-input[type="password"] {
-    width: 95%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
+.resultados {
+    display: flex;
+    overflow-y: auto;
+    max-width: 100vw;
+    background-color: #d0ecea;
+    margin: 10px;
 }
 
-button {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    font-size: 16px;
-    font-weight: bold;
-    color: #fff;
-    background-color: #007bff;
+.tarjeta-contenedor{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-grow: 1;
+}
+
+.tarjetaPedido{
+    width: 40%;
+    max-width:100vw;
+    padding: 20px;
+    border-radius: 20px;
+    background-color: #bec2c5;
+    margin: 10px;
+    text-align: left;
+  
+}
+
+.tarjetaPedido button {
+    margin-top: 10px;
+    padding: 10px 20px;
+    font-size: 14px;
+    background-color: #8b7a5e;
+    font-size: large;
     border: none;
-    border-radius: 3px;
+    border-radius: 4px;
     cursor: pointer;
+    transition-duration: 0.5s;
+    color: #ffffff;
 }
 
-button:hover {
-    background-color: #0056b3;
+.tarjetaPedido button:hover{
+    background-color: #ffefd3 ;
 }
