--- a/CSS/StatementsRGScript.css
+++ b/CSS/StatementsRGScript.css
@@ -1,72 +1,94 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f7e1e1;
-    background-repeat: no-repeat;
-    background-size: cover;
+    margin: 0;
+    padding: 0;
+    background-color: #ffefd3;
+}
+
+header {
+    background-color: #9fd6d2;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+  
+.header-info {
+    flex-grow: 1;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    margin: 0;
-    padding: 0;
-    background-image: url("../resourses/FondoInicioSesion.jpg");
-    
 }
+
+.header-info label {
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.header-buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-end;
+}
+
+.header-buttons button {
+    margin-top: 10px;
+    padding: 10px 20px;
+    font-size: 14px;
+    background-color: #8b7a5e ;
+    font-size: large;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+  
 .logo {
-    position: fixed;
-    top: 5vh;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 30vw;
+    width: 200px;
+    height: 100px;
+    margin-right: 20px;
 }
-.contenido {
-    width: 90%;
+
+.content {
+    width: 150%;
     max-width: 400px;
     padding: 20px;
-    background-color: #ffffff;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
-
-h1 {
-    text-align: center;
-}
-
-form {
     margin-top: 20px;
-}
-
-.form-group {
-    margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
 
 label {
     display: block;
-    font-weight: bold;
+    text-align: center;
+    width: 100%;
 }
 
-input[type="text"],
-input[type="password"] {
-    width: 95%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
+select, input[type="text"] {
+    align-items: center;
+    width: 100%;
+    padding: 5px;
+    margin-bottom: 10px;
+}
+
+.direccion-buttons{
+    display: flex;
+    justify-content: flex-start;
 }
 
 button {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    font-size: 16px;
-    font-weight: bold;
-    color: #fff;
-    background-color: #007bff;
+    background-color: #8b7a5e;
+    color: white;
     border: none;
-    border-radius: 3px;
+    padding: 10px 20px;
+    margin: 10px;
     cursor: pointer;
+    transition-duration: 0.5s;
 }
 
-button:hover {
-    background-color: #0056b3;
+button:hover{
+    background-color: #ffefd3 ;
 }
+  
